criado um novo padrão de CSS para os relatórios

--- a/administracao/templates/administracao/administracao.html
+++ b/administracao/templates/administracao/administracao.html
@@ -52,7 +52,7 @@
   {% lng "Exportar Dados" "Export Data" %}
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'exportar_documentos_projetos' %}">
-  {% lng "Exportar Relatórios dos Projetos" "Export Project Reports" %}
+  {% lng "Exportar Relatórios (documentos) dos Projetos" "Export Reports (documents) of Projects" %}
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'executa_backup' %}">
   {% lng "Executar Backup Manual" "Execute Manual Backup" %}
